:ambulance: fix bugdisplay scrollbar in WIN and Chrome GL-5490

--- a/app/webroot/less/dashboard_circle_list.less
+++ b/app/webroot/less/dashboard_circle_list.less
@@ -117,6 +117,9 @@
   overflow-y: scroll;
   width: 100%;
   -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 .dashboard-circle-list-footer {
   padding: 4px;
